<resources>
    <string name="app_name">CookS</string>
    <string name="homePage">首页</string>
    <string name="worksPage">作品</string>
    <string name="collectionPage">收藏</string>
    <string name="classificationPage">分类</string>

    <string name="mine">我</string>
    <string name="star">收藏</string>
    <string name="play">播放</string>
    <string name="logo">基于Android的智能语音烹饪助手</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_self">我的信息</string>
    <string name="drawer_item_add_product">添加菜谱</string>
    <string name="drawer_item_settings">Setting</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="more">More</string>

    <string name="prompt_email">用户名：</string>
    <string name="prompt_password">密 码：</string>
    <string name="prompt_password_again">请确认密码：</string>
    <string name="action_sign_in">注册并登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="comfirm">确定</string>
    <string name="error_invalid_password">密码必须大于四位</string>
    <string name="error_again_password">两次密码不匹配</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此处必填</string>
    <string name="drawer_item_logout">注销账户</string>
    <string name="logining">登录中</string>
    <string name="publish">上传</string>

    <string name="xiafancai">下饭菜</string>
    <string name="biandang">便当</string>
    <string name="sushi">素食</string>
    <string name="jiachangcai">家常菜</string>
    <string name="tianpin">甜品饮品</string>
    <string name="shala">沙拉凉菜</string>
    <string name="lanrenshipu">懒人食谱</string>
    <string name="mianshi">面食小吃</string>
    <string name="tangpin">汤品</string>

    <string name="cai_pu_ming">菜谱名</string>
    <string name="cai_shi">菜式选择：</string>
    <string name="describe">描述</string>
    <string name="made_by">Made By :</string>
    <string name="author">作者：</string>
    <string name="cl">材料：</string>
    <string name="zf">做法：</string>
    <string name="bz">步骤：</string>
    <string name="thanks">谢谢欣赏，如果喜欢可以收藏~</string>
    <string name="example1">例：猪肉</string>
    <string name="example2">500g</string>
    <string name="step">Step:</string>
    <string name="title">title</string>
    <string name="username">username</string>
    <string name="choice">请选择</string>
    <string name="take_photo">拍照上传</string>
    <string name="gallery">从本地图库选择</string>

    <string name="remember_pw">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="test">测试</string>

    <string name="add">ADD</string>
    <string name="delete">DELETE</string>

    <string-array name="photo_choice">
        <item>拍照上传</item>
        <item>从本地图库选择</item>
    </string-array>

    <string-array name="dishesType">
        <item>下饭菜</item>
        <item>便 当</item>
        <item>素 食</item>

        <item>家常菜</item>
        <item>甜品饮品</item>
        <item>沙拉凉菜</item>

        <item>懒人食谱</item>
        <item>面食小吃</item>
        <item>汤 品</item>
    </string-array>



</resources>
