<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/register_form"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ECEDF1"
              android:orientation="vertical">

    <include layout="@layout/toolbar_login"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ImageView
            android:id="@+id/image_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/burger"/>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@id/image_login"
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:textColorHint="@color/gray">

            <AutoCompleteTextView
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/gray"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:textColorHint="@color/gray"
            app:passwordToggleTint="@color/colorAccent">

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/register"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/gray"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_below="@id/t2"
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button_div2"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </RelativeLayout>

</LinearLayout>
