<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_upload"/>

    <EditText
        android:id="@+id/title_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/cai_pu_ming"/>

    <EditText

        android:id="@+id/type_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/cai_shi"
        android:textSize="16sp"/>

    <EditText

        android:id="@+id/describe_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/describe"/>

    <ImageView

        android:id="@+id/image_upload"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/add_img"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_addM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="#ffff0000"
                android:dividerHeight="10dp">
            </android.support.v7.widget.RecyclerView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_addS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rv_addM"
                android:divider="#ffff0000"
                android:dividerHeight="10dp">
            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>