<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEDF1"
    android:orientation="vertical">

    <include layout="@layout/toolbar_login"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:paddingBottom="5dp"
            android:textColorHint="@color/gray">

            <AutoCompleteTextView
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/gray"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorAccent"
            android:paddingBottom="5dp"
            android:textColorHint="@color/gray"
            app:passwordToggleTint="@color/colorAccent">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/gray"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password"
            android:buttonTint="@color/colorAccent"
            android:text="记住密码"
            android:textColor="@color/gray"/>

        <CheckBox
            android:id="@+id/auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/remember_password"
            android:buttonTint="@color/colorAccent"
            android:text="自动登录"
            android:textColor="@color/gray"/>

        <Button
            android:id="@+id/login"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button_div2"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/register"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button_div2"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>